--- a/_02_dbt_transformation/dbt_project.yml
+++ b/_02_dbt_transformation/dbt_project.yml
@@ -35,6 +35,7 @@ models:
       +schema: staging
       +materialized: view
     marts:
+      +enabled: false
       core:
         +schema: marts
         +materialized: table
